--- a/notebooks/dining_room.Rmd
+++ b/notebooks/dining_room.Rmd
@@ -29,20 +29,27 @@ library(Exact)
 library(psych)
 library(gvlma)
 library(lmtest)
-
+library(lme4)
+```
+```{r, message=FALSE, warning=FALSE}
 # Load the CSV files
-
 users = read_csv(
   "~/Documents/GT/Research/Data/arbitration/2019-12-09/results/users.csv",
   col_types = cols(
-    study_condition = col_factor(levels = seq(from = 1, to = 10))
+    study_condition = col_factor(),
+    noise_level = col_factor(),
+    age_group = col_factor(),
+    robot_experience = col_factor()
   )
 )
 
 actions = read_csv(
   "~/Documents/GT/Research/Data/arbitration/2019-12-09/results/actions.csv",
   col_types = cols(
-    study_condition = col_factor(levels = seq(from = 1, to = 10))
+    study_condition = col_factor(),
+    noise_level = col_factor(),
+    age_group = col_factor(),
+    robot_experience = col_factor()
   )
 )
 
@@ -59,6 +66,10 @@ actions$study_condition = mapvalues(actions$study_condition,
                                           "2"="DX_100", "3"="AX_100", "4"="DXAX_100",
                                           "5"="DX_90", "6"="AX_90", "7"="DXAX_90",
                                           "8"="DX_80", "9"="AX_80", "10"="DXAX_80"))
+
+# Relevel the non-binary age
+users$gender[users$gender == 'U'] = 'M'
+actions$gender[actions$gender == 'U'] = 'M'
 ```
 ```{r, message=FALSE, warning=FALSE}
 # Helper functions copied from http://www.cookbook-r.com/Graphs/Plotting_means_and_error_bars_(ggplot2)/
@@ -123,54 +134,147 @@ powerTransform <- function(y, lambda1, lambda2 = NULL, method = "boxcox") {
   , tukey = y^lambda1
   )
 }
+
+# Function for computing the predictions and CIs for the conditional probability
+predictCIsLogistic <- function(object, newdata, level = 0.95) {
+  # Compute predictions in the log-odds
+  pred <- predict(object = object, newdata = newdata, se.fit = TRUE)
+
+  # CI in the log-odds
+  za <- qnorm(p = (1 - level) / 2)
+  lwr <- pred$fit + za * pred$se.fit
+  upr <- pred$fit - za * pred$se.fit
+
+  # Transform to probabilities
+  fit <- 1 / (1 + exp(-pred$fit))
+  lwr <- 1 / (1 + exp(-lwr))
+  upr <- 1 / (1 + exp(-upr))
+
+  # Return a matrix with column names "fit", "lwr" and "upr"
+  result <- cbind(fit, lwr, upr)
+  colnames(result) <- c("fit", "lwr", "upr")
+  return(result)
+}
+
+# -loglik(beta)
+minusLogLik <- function(beta) {
+  p <- 1 / (1 + exp(-(beta[1] + beta[2] * x)))
+  -sum(y1 * log(p) + (1 - y1) * log(1 - p))
+}
+
+# Plotting function
+plotFunGLM <- function(x, eta, y, n = 200, ind = 1, fam = "poisson") {
+  
+  if (missing(y)) {
+    y <- switch(fam,
+                "poisson" = rpois(n, lambda = exp(eta)),
+                "binomial" = rbinom(n, prob = 1 / (1 + exp(-eta)), size = 1))
+  }
+  mod <- glm(y ~ x, family = fam)
+  if (ind < 7) {
+    plot(mod, which = ind,
+         main = list("Residuals vs Fitted", "Normal Q-Q", "Scale-Location", 
+                     "Cook's distance", "Residuals vs Leverage", 
+                     expression("Cook's dist vs Leverage  " 
+                                * h[ii]/(1 - h[ii])))[ind], caption = "")
+  } else {
+    plot(mod$residuals, type = "o", ylab = "Residuals", 
+         main = "Residuals series")
+  }
+  plot(x, y, pch = 16, main = "Data scatterplot")
+  t <- seq(-100, 100, l = 1e4)
+  lines(t, predict(mod, newdata = data.frame(x = t), type = "response"), 
+        col = 2)
+  
+}
+
+
+# Computation of the R^2 with a function -- useful for repetitive computations
+r2glm <- function(model) {
+
+  summaryLog <- summary(model)
+  1 - summaryLog$deviance / summaryLog$null.deviance
+
+}
 ```
 
-## Scratch
+## Metrics
 
-```{r}
-m1 = glm(scenario_completed ~ ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience),
-         data=users, family = 'binomial')
-summary(m1)
-with(m1, pchisq(null.deviance - deviance, df.null - df.residual, lower.tail = FALSE))
-```
-```{r}
-plot_df = subset(users, scenario_completed = T);
-# plot_df = users;
-plot_df$num_actions_diff_1 = plot_df$num_actions_diff + 1;
-# m2 = lm(num_actions_diff ~ ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + num_optimal + scenario_completed,
-#         data=plot_df)
-m2 = lm(num_actions_diff ~ ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + num_optimal,
-        data=plot_df)
-summary(m2)
-gvlma::gvlma(m2)
-shapiro.test(resid(m2))
+### Scenario Completed
 
-# m2 = lm(num_actions_diff_1 ~ ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + num_optimal + scenario_completed,
-#         data=plot_df)
-m2 = lm(num_actions_diff_1 ~ ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + num_optimal,
-        data=plot_df)
-summary(m2)
-gvlma::gvlma(m2)
-shapiro.test(resid(m2))
-
-# Do boxcox
-bc = boxcox(m2)
-(lambda = bc$x[which.max(bc$y)])
-# m3 = lm(powerTransform(num_actions_diff_1, lambda) ~ ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + num_optimal + scenario_completed,
-#         data=plot_df)
-m3 = lm(powerTransform(num_actions_diff_1, lambda) ~ ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + num_optimal,
-        data=plot_df)
-summary(m3)
-gvlma::gvlma(m3)
-shapiro.test(resid(m3))
-```
+Did the person complete the scenario?
 
 ```{r}
 plot_df = users;
-plot_df$num_actions_diff_1 = plot_df$num_actions_diff + 1;
-m2 = glm(num_actions_diff ~ ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + num_optimal + scenario_completed,
-        data=plot_df,
-        family='poisson')
-summary(m2)
-with(m2, pchisq(null.deviance - deviance, df.null - df.residual, lower.tail = FALSE))
+complete.model = glm(
+  scenario_completed ~ ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience),
+  data=plot_df,
+  family = 'binomial'
+)
+summary(complete.model)
+with(complete.model, pchisq(null.deviance - deviance, df.null - df.residual, lower.tail = FALSE))
+```
+```{r, eval=FALSE}
+# Additional diagnostics
+r2glm(complete.model)
+anova(complete.model, test = "Chisq")
+car::vif(complete.model)
+```
+
+
+### Num Actions Diff
+
+This is the number of actions taken by the user minus the number of optimal actions for the scenario they were provided.
+
+```{r}
+plot_df = users;
+actions_diff.model = glm(
+  num_actions_diff ~ ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + num_optimal + scenario_completed,
+  data=plot_df,
+  family = 'poisson'
+)
+summary(actions_diff.model)
+with(actions_diff.model, pchisq(null.deviance - deviance, df.null - df.residual, lower.tail = FALSE))
+```
+```{r, eval=FALSE}
+# Additional diagnostics
+r2glm(actions_diff.model)
+anova(actions_diff.model, test = "Chisq")
+car::vif(actions_diff.model)
+```
+
+
+### Took Optimal Action
+
+Given the state, did the user take the optimal action?
+
+```{r, eval=FALSE}
+# Linear Regression...
+plot_df = actions
+optimal_action.model = lm(
+  optimal_ax ~ ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + start_state + (1 | X1),
+  data=plot_df
+)
+summary(optimal_action.model)
+shapiro.test(optimal_action.model$residuals)
+```
+
+```{r}
+# Logistic regression
+optimal_action.model = glmer(
+  optimal_ax ~ ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + (gripper_empty:mislocalized:bowl_visible) + (1 | X1),
+  data=plot_df,
+  family = 'binomial'
+)
+summary(optimal_action.model)
+with(actions_diff.model, pchisq(null.deviance - deviance, df.null - df.residual, lower.tail = FALSE))
+```
+
+```{r, eval=FALSE}
+# Additional diagnostics
+r2glm(optimal_action.model)
+anova(optimal_action.model, test = "Chisq")
+# Cannot perform VIF test
+# alias(optimal_action.model)
+# car::vif(optimal_action.model)
 ```
