A new markdown file for prod

--- a/notebooks/dining_room.ipynb
+++ b/notebooks/dining_room.ipynb
@@ -222,6 +222,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<StartConditions.AT_COUNTER_MISLOCALIZED: 'dt.kc.default.default.default.empty.kc'>,\n",
+       " <StartConditions.AT_COUNTER_OCCLUDING: 'kc.kc.occluding.default.default.empty.dt'>,\n",
+       " <StartConditions.AT_TABLE: 'kc.dt.default.default.default.empty.dt'>,\n",
+       " <StartConditions.AT_TABLE_OCCLUDING_ABOVE_MUG: 'kc.dt.occluding.above_mug.default.empty.dt'>]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_conditions"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -233,9 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -356,9 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
